# stock-dashboard-stlite

./: .gitignore  CLAUDE.md  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml
src/: App.tsx  constants.ts  main.tsx
src/api/: yahooFinance.ts
src/components/: ChartTypeSelector.tsx  PeriodSelector.tsx  PriceHeader.tsx  SearchBar.tsx  StockChart.tsx  SubMetrics.tsx
src/context/: theme.tsx
src/types/: plotly-basic.d.ts  stock.ts
src/utils/: baseline.ts  formatPrice.ts  urlParams.ts
